--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="w-full bg-white text-gray-700 shadow-inner mt-12">
+<footer class="w-full bg-white text-gray-700 shadow-inner mt-12 rounded-lg">
   <div class="max-w-7xl mx-auto px-4 sm:px-6 md:px-8 py-10 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-8">
     
     <!-- Logo & Description -->
