--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -79,7 +79,7 @@
 <app-category></app-category>
 <app-offer></app-offer>
 
-<section class="px-6 py-20 md:px-16 bg-gradient-to-b from-white via-orange-50 to-white relative overflow-hidden rounded-sm">
+<section class="px-6 py-20 md:px-16 bg-gradient-to-b from-white via-orange-50 to-white relative overflow-hidden rounded-lg">
   <!-- Section Header -->
   <div class="text-center mb-16 relative z-10">
     <h2 class="text-4xl sm:text-5xl font-extrabold text-gray-900 mb-4 tracking-tight animate-pulse">
@@ -91,7 +91,7 @@
   </div>
 
   <!-- Reviews Grid -->
-  <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-10 relative z-10">
+  <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-10 relative z-10 ">
     <!-- Card -->
     <div class="relative bg-white p-6 rounded-3xl shadow-xl border border-orange-100 hover:scale-105 transition-transform duration-300 group">
       <div class="absolute -top-6 left-6 w-14 h-14 rounded-full overflow-hidden border-4 border-white shadow-md">
