--- a/src/app/offer/offer.component.html
+++ b/src/app/offer/offer.component.html
@@ -1,4 +1,4 @@
-  <div class="grid md:grid-cols-2 gap-12 items-center bg-white rounded-3xl shadow-2xl p-8 md:p-12">
+  <div class="grid md:grid-cols-2 gap-12 items-center bg-white rounded-3xl shadow-2xl p-8 md:p-12 mb-7">
 
     <!-- Product Image -->
     <div class="relative overflow-hidden rounded-2xl shadow-lg group">
