--- a/src/app/orders/orders.component.html
+++ b/src/app/orders/orders.component.html
@@ -20,12 +20,14 @@
   class="inline-block min-w-[100px] text-center px-3 py-1 rounded-full text-sm font-semibold shadow-sm border transition-all duration-200"
   [ngClass]="{
     'bg-yellow-100 text-yellow-800 border-yellow-300': order.orderStatus === 'PENDING',
-    'bg-green-100 text-green-800 border-green-300': order.orderStatus === 'DELIVERED',
+    'bg-blue-100 text-blue-800 border-blue-300': order.orderStatus === 'OUT_FOR_DELIVERY',
+    'bg-green-100 text-green-800 border-green-300': order.orderStatus === 'DELIVERED' || order.orderStatus === 'COMPLETED',
     'bg-red-100 text-red-800 border-red-300': order.orderStatus === 'CANCELLED'
   }"
 >
-  {{ order.orderStatus }}
+  {{ order.orderStatus.replace('_', ' ') }}
 </span>
+
 
     </div>
 
